# text-to-sql

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  program.md  pyproject.toml  score.sh
.claude/agents/: bench.md  data-eval.md  policy.md  semantics.md  verifier.md
.claude/commands/: delegate-next.md  full-eval.md  quick-score.md
config/: agency_aliases.yaml  glossary.yaml  metric_dictionary.yaml  slice.yaml
datasets/: README.md
docs/: evaluation_framework.md  harness_design.md  improvement_log.md  project_context.md  public_db_adaptation.md  retrospective_v1.md  source_notes.md  ssot_guide.md  troubleshooting.md  wbs_v0.1.md  wbs_v0.2.md
eval/: README.md
eval/cases/: MANIFEST.md  combined_hard_cases.jsonl  easy_baseline.jsonl  entity_resolution.jsonl  gold_easy_baseline.jsonl  gold_result_snapshot_template.jsonl  gold_smoke_hard.jsonl  (+6 more)
harness/: run.sh  team.toml
scripts/: bootstrap_data.py  rebuild_eval_cases.py  smoke_test.py
src/: config.py  data_download.py  db.py  executor.py  ir.py  llm_client.py  loader.py  pipeline.py  prompt_builder.py  schema_inspector.py
tests/: conftest.py  test_ambiguity_detector.py  test_architecture_check.py  test_case_loader.py  test_config.py  test_data_download.py  test_db.py  test_entity_resolver.py  test_executor.py  test_gold_loader.py  test_ir.py  test_llm_client.py  test_loader.py  test_metric_interpreter.py  test_pipeline.py  test_prompt_builder.py  test_result_compare.py  test_schema_inspector.py  test_scope_interpreter.py  test_score_integration.py  test_scorer.py  test_time_interpreter.py
(+16 files in other folders)
